--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-            rel="stylesheet">
-
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <div class="grid grid--1x2 grid--1x3">
-            <div style="height: 100px; background: gold"></div>
-            <div style="height: 100px; background: dodgerblue"></div>
-            <div style="height: 100px; background: tomato"></div>
+        <div class="media">
+            <div class="media__image">
+                <svg class="icon icon--primary">
+                    <use xlink:href="images/sprite.svg#snap"></use>
+                </svg>
+            </div>
+            <div class="media__body">
+                <h3 class="media__title">Easy start & managed updates</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Officiis eos incidunt earum ipsa, quae ducimus nemo,
+                    doloribus in debitis reprehenderit voluptate cupiditate
+                    molestias sed, iure asperiores reiciendis eligendi magni?
+                    Repudiandae et minus vel animi, quidem doloribus dicta
+                    libero maiores dolorem temporibus, eius impedit delectus
+                    vitae modi atque illum porro corporis?</p>
+            </div>
         </div>
     </body>
 </html>
