--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-
+        <div class="callout callout--primary">
+            <div class="grid grid1x2">
+                <div class="callout__content">
+                    <h2 class="callout__heading">Ready to get started?</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Ab sapiente omnis eaque sed voluptatem repellat
+                        consequuntur natus odio animi voluptatum.</p>
+                </div>
+                <a href="#"
+                    class="btn btn--secondary btn--stretched">Get Started</a>
+            </div>
+        </div>
     </body>
 </html>
